# Ti375G529_projects

./: .gitignore  LICENSE  README.md
Blink/: MyDevBoardProject1.peri.xml  MyDevBoardProject1.xml  MyTop.v
FT601_loopback/: FT601_loopback.peri.xml  MyDevBoardProject1.xml
FT601_loopback_ram/: FT601_loopback.peri.xml  FT601_loopback_ram.peri.xml  FT601_loopback_ram.xml  MyDevBoardProject1.xml  README.md  debug_TEMPLATE.v  debug_TEMPLATE.vhd  debug_profile.json  debug_top.v  la0_waveform.vcd
LPDDR4/: README.md  ca_training.py  console.py  debug_ctl_access.py  debug_ddr_status.py  debug_memtest.py  debug_memtest_detailed.py  excp.py  initialization.py  io_calibration.py  read_leveling.py  test_auto_init.py  test_bandwidth.py  test_bandwidth_accurate.py  test_many_writes.py  test_mass_then_read.py  test_reg_read.py  test_reg_readback.py  test_single_write.py  test_sizes.py  test_status.py  test_usb_simple.py  test_version.py  test_write_only.py  test_write_read.py  usb_console.py  usb_ddr_control.py  write_dq_leveling.py
LVDS_LPDDR4/: README.md  test_bandwidth_accurate.py  test_echo.py  test_echo_debug.py  test_hardware_autoinit.py  test_scope_bandwidth.py  test_scope_commands.py  test_stale_data.py  test_tx_mass.py  test_version.py  usb_ddr_control.py  usb_rx_mass.py  usb_utils.py
LVDS_LPDDR4_G529/: FPGA_Pinout.md  README.md  USB_FTX232H_FT60X.py  test_echo.py  test_scope_commands.py  usb_rx_mass.py
LVDS_LPDDR4_G529/kicad/autorouter/rust_router/: Cargo.toml  README.md  benchmark.py  benchmark_full.py
LVDS_LPDDR4_G529/kicad/autorouter/rust_router/src/: lib.rs
(+171 files in other folders)
